<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient"
    tools:context=".View.Activity.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/ll_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleX="3"
                android:scaleY="3"
                android:src="@drawable/ic_logo_huruf" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_notif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="72dp"
                android:fontFamily="@font/morina"
                android:text="@string/login_notifikasi"
                android:textAlignment="center"
                android:textColor="@color/textDark"
                android:textColorHint="@color/textDark"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/textDark"
                app:boxBackgroundColor="@color/background"
                app:hintTextColor="@color/textDark">

                <com.example.afbstoryapp.view.customUI.EdtFormName
                    android:id="@+id/ed_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:ems="10"
                    android:hint="@string/register_email"
                    android:inputType="textWebEmailAddress"
                    android:textColor="@color/textDark"
                    android:textColorHint="@color/textDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/textDark"
                app:boxBackgroundColor="@color/background"
                app:hintTextColor="@color/textDark">

                <com.example.afbstoryapp.view.customUI.EdtFormPassword
                    android:id="@+id/ed_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/login_password"
                    android:inputType="text"
                    android:textColor="@color/textDark"
                    android:textColorHint="@color/textDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.capstone.prettyU.View.CustomUI.BtnCustomGeneral
                android:id="@+id/btn_sign_in"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/text_btn_login" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>